--- a/index.html
+++ b/index.html
@@ -10,7 +10,10 @@
 <body>
   <header>
     <div id=metstories>
+      <!-- 
       <div id='innermetstories'><img src="The_Metropolitan_Museum_of_Art_Logo.svg" alt="MET Logo" width=70px height=70px>Stories</div>
+      -->
+      <div id='innermetstories'><img src="Bird_ONLY_Logo.jpg" alt="CHP Logo" width=70px height=70px>Chesapeake Heartland Project Stories</div>
     </div>
     <div id='titleandform'>
     <form autocomplete="off" onsubmit="search();return false" name="myForm">
